--- a/Offroad-sites.html
+++ b/Offroad-sites.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header class="jumbotron jumbotron-fluid">
-                <h1>Best offroada sites in Arizona</h1>
+                <h1>Best offroad sites in Arizona</h1>
         </header>
         <div class="flex-container">
             <div class="zoomeffect-1">
